// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "pip-services.users.accounts.version1";
option java_outer_classname = "AccountsProtoV1";
option objc_class_prefix = "ACCOUNTS_CMD_V1";

package accounts_v1;

message ErrorDescription {
  string type = 1;
  string category = 2;
  string code = 3;
  string correlation_id = 4;
  string status = 5;
  string message = 6;
  string cause = 7;
  string stack_trace = 8;
  map<string, string> details = 9;
}

message PagingParams {
    int64 skip = 1;
    int32 take = 2;
    bool total = 3;
}

message Account {
    // Identification
    string id = 1;
    string login = 2;
    string name = 3;
    string about = 4;

    // Activity tracking
    string create_time = 5;
    bool deleted = 6;
    bool active = 7;

    // User preferences
    string time_zone = 8;
    string language = 9;
    string theme = 10;

    // Custom fields
    string custom_hdr = 11;
    string custom_dat = 12;
}

message AccountPage {
    int64 total = 1;
    repeated Account data = 2;
}

// The accounts service definition.
service Accounts {
  rpc get_accounts (AccountPageRequest) returns (AccountPageReply) {}
  rpc get_account_by_id (AccountIdRequest) returns (AccountObjectReply) {}
  rpc get_account_by_login (AccountLoginRequest) returns (AccountObjectReply) {}
  rpc get_account_by_id_or_login (AccountLoginRequest) returns (AccountObjectReply) {}
  rpc create_account (AccountObjectRequest) returns (AccountObjectReply) {}
  rpc update_account (AccountObjectRequest) returns (AccountObjectReply) {}
  rpc delete_account_by_id (AccountIdRequest) returns (AccountObjectReply) {}
}

// The request message containing the account page request.
message AccountPageRequest {
  string correlation_id = 1;
  map<string, string> filter = 2;
  PagingParams paging = 3;
}

// The response message containing the account page response
message AccountPageReply {
  ErrorDescription error = 1;
  AccountPage page = 2;
}

// The request message containing the account id request.
message AccountIdRequest {
  string correlation_id = 1;
  string account_id = 2;
}

// The request message containing the account login request.
message AccountLoginRequest {
  string correlation_id = 1;
  string login = 2;
}

// The request message containing the account object request.
message AccountObjectRequest {
  string correlation_id = 1;
  Account account = 2;
}

// The response message containing the account object response
message AccountObjectReply {
  ErrorDescription error = 1;
  Account account = 2;
}

